# wslogtail

./: .gitignore  README.md  setup.cfg  setup.py
wslogtail/: __init__.py  index.html
