[flake8]
exclude = .tox,*.egg

[metadata]
name = wslogtail
version = 1.0.1
description = Log tail, from redis pubsub to logfile buffer and websocket streaming.
author = Laurent COUSTET
author_email = laurent.coustet@clarisys.fr
url = https://gitlab.clarisys.fr/common/wslogtail
requires-python = >=3.5

[options]
packages = find:
install_requires =
    websockets
    ansi2html
    asyncio-redis
